// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SubmitButton > matches the snapshot 1`] = `
"<button class="centerItems buttonLink submitButton submitButton" draggable="false" type="submit">
  <!--v-if--><span class="clamp text">Default slot content.</span>
</button>"
`;

exports[`SubmitButton > when fullWidth prop is set to true > matches the snapshot 1`] = `
"<button class="centerItems buttonLink centerAll fullWidth submitButton submitButton" draggable="false" type="submit">
  <!--v-if--><span class="clamp text">Default slot content.</span>
</button>"
`;

exports[`SubmitButton > when loading prop is set to true > matches the snapshot 1`] = `"<button class="centerItems buttonLink alignRight disabled submitButton submitButton" disabled="" draggable="false" type="submit"><span class="centerItems spinningLoader icon" aria-hidden="true" weight="regular"><phcirclenotch class="icon" size="24"></phcirclenotch><span class="visuallyHidden">Loading...</span></span><span class="clamp text">Default slot content.</span></button>"`;
